--- a/main.css
+++ b/main.css
@@ -1,46 +1,6 @@
-.row {
-  display: flex;
-  flex-direction: row;
-  gap: 4px;
-  margin-bottom: 4px;
-}
-
-.btn {
-  width: 48px;
-  height: 48px;
-  background-color: #2699FB;
-  color: #FFF;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  font-size: 12px;
-  font-weight: 700;
-}
-
-.btn:active {
-  background-color: #007FEB;
-}
-
-.btn-lg {
-  width: 100px;
-  height: 48px;
-}
-
-.input {
-  margin: 0;
-  margin-bottom: 4px;
-  padding: 0 12px;
-  width: 204px;
-  height: 48px;
-  box-sizing: border-box;
-  outline: none;
-}
-
-.input:disabled {
-  background-color: #FFF;
-  border: 1px solid #BCE0FD;
-  color: #BCE0FD;
-  font-size: 14px;
-}
+.row {display:flex;flex-direction:row;gap:4px;margin-bottom:4px;}
+.btn {width:48px;height:48px;background-color:#2699FB;color:#FFF;border-radius:4px;display:flex;justify-content:center;align-items:center;border:none;font-size:12px;font-weight:700;}
+.btn:active {background-color:#007FEB;}
+.btn-lg {width:100px;height:48px;}
+.input {margin:0;margin-bottom:4px;padding:0 12px;width:204px;height:48px;box-sizing:border-box;outline:none;}
+.input:disabled {background-color:#FFF;border:1px solid #BCE0FD;color:#BCE0FD;font-size:14px;}
